@@ -66,7 +66,8 @@
      <dt onmouseover="updateStatus();"><a href="void();" onclick="clicked('http://www.faulkes-telescope.com/ft_webcams_weather/ftnweather.htm');" class="location" id="location05">Haleakala, HI, U.S.A.</a></dt>
      <dd><a href="javascript:void(0);" class="close"> </a>
          <em><strong>Faulkes North</strong><br>Haleakala, HI, U.S.A.</em><br>
-         <img width="120" src="http://132.160.98.239:8275/axis-cgi/jpg/image.cgi?resolution=320x240" alt="FTN web camera">
+  <!--   <img width="120" src="http://132.160.98.239:8275/axis-cgi/jpg/image.cgi?resolution=320x240" alt="FTN web camera"> -->
+         <img src="http://www.estar.org.uk/jpg/test_card.jpg" width="120" alt="FTN web camera" />  
          <a href="void();" onclick="clicked('http://maps.google.com/?ie=UTF8&t=h&om=1&ll=20.732997,-156.187134&spn=0.548416,0.911865');">Lat. 10.7, Long. -156.2</a><br>
 	 <p class='popupstatus' id='ftnmachines'></p> 
 
@@ -94,7 +95,7 @@
     <!--<div id='debugDiv'></div>-->
     
     <img class="estarlogo" id="estarlogo" src="png/estarLogo.png" />
-    <p class="title" id="title">Network Status Monitor Widget v1.6.3<br><em>Copyright &copy; 2006, Alasdair Allan &lt;<a href="void();" onclick='clicked("mailto:aa@astro.ex.ac.uk");'>aa@astro.ex.ac.uk</a>&gt;</em></p>
+    <p class="title" id="title">Network Status Monitor Widget v1.6.4<br><em>Copyright &copy; 2006, Alasdair Allan &lt;<a href="void();" onclick='clicked("mailto:aa@astro.ex.ac.uk");'>aa@astro.ex.ac.uk</a>&gt;</em></p>
     <p class="backbody" id="backbody">For more information about the <font color="red">e</font>STAR Network please see our <a href="void();" onclick="clicked('http://www.estar.org.uk/');">project website</a>.<br>
 This version of the widget includes support for the Faulkes Telescope South.</p>
     <div class="widgetButton" id="donePrefsButton" style='position: absolute;bottom: 24px; right: 30px;'></div>
